# file-monitor

./: LICENSE  NEWS  README.md  configure.ac
include/: fmond_plugin.h  logs.h
src/: Makefile.am  logs.c  main.c  ssh.c
